panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__char__test_backslash_newline.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/char/test_backslash_newline.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/char/test_backslash_newline.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%c\n")
               'a'))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%c\n")
               'b')))))

----- stderr -----
