panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__char__test_prefixed_char_literal_types.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/char/test_prefixed_char_literal_types.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (expression
            (generic
               u8'a'
               (assoc `unsigned char` 0)))
         (expression
            (generic
               u'a'
               (assoc `unsigned short` 0)))
         (expression
            (generic
               U'a'
               (assoc `unsigned int` 0)))
         (expression
            (generic
               L'a'
               (assoc `int` 0))))))

----- stderr -----
