panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__char__test_signed_unsigned_char.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/char/test_signed_unsigned_char.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/char/test_signed_unsigned_char.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (declaration a~3 `char` 'a')
         (declaration b~4 `unsigned char` 'b')
         (declaration c~5 `signed char` 'c')
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%c%c%c\n")
               (name a~3 `char`)
               (name b~4 `unsigned char`)
               (name c~5 `signed char`)))
         (declaration x~6 `unsigned char` 200)
         (declaration y~7 `signed char` (negate 5))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (name x~6 `unsigned char`)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (name y~7 `signed char`))))))

----- stderr -----
